fixed spacing on gifs

--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ iframe {
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 25vh;
+    height: 20vh;
     background-color: white;
     color: white;
     text-align: center;
@@ -211,12 +211,12 @@ iframe {
 
 .giphy-styling {
     width: 100%;
+    position: relative;
 }
 
 .img-resizing-pause {
     width: 60%;
     height: auto;
-    margin-right: 1rem;
 }
 
 .img-resizing-reset {
@@ -339,6 +339,8 @@ iframe {
     background-color: white;
     position: absolute;
     z-index: 100;
+    box-shadow: 0px 3px 20px rgba(0, 0, 0, .16);
+    border-radius: 7px;
 }
 
 .tile h1 {
@@ -366,5 +368,4 @@ iframe {
     background-color: #ff6e62;
     border-style: none;
     box-shadow: 0px 3px 20px rgba(0, 0, 0, .16);
-
 }
